add year, move projects

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       font-size: 0.95rem;
     }
 
+    .year {
+      color: #999;
+      font-weight: 400;
+    }
+
     .section-title {
       font-size: 0.8rem;
       font-weight: 500;
@@ -95,25 +100,25 @@
   <h2 class="section-title">Active</h2>
   <section class="projects">
     <article class="project">
-      <h2><a href="https://github.com/to-ny/save">save</a></h2>
+      <h2><a href="https://github.com/to-ny/save">save</a> <span class="year">2025—</span></h2>
       <p>Distributed object storage written in Rust.</p>
-    </article>
-
-    <article class="project">
-      <h2><a href="https://github.com/to-ny/devflow">devflow</a></h2>
-      <p>Desktop app integrating an AI agent with Git diff review.</p>
-    </article>
-
-    <article class="project">
-      <h2><a href="https://github.com/to-ny/friends-log">friends-log</a></h2>
-      <p>A geeky way to make sure I don't go too long without seeing my friends.</p>
     </article>
   </section>
 
   <h2 class="section-title">Past</h2>
   <section class="projects">
     <article class="project">
-      <h2><a href="https://github.com/to-ny/crypto-trackers">crypto-trackers</a></h2>
+      <h2><a href="https://github.com/to-ny/devflow">devflow</a> <span class="year">2025</span></h2>
+      <p>Desktop app integrating an AI agent with Git diff review.</p>
+    </article>
+
+    <article class="project">
+      <h2><a href="https://github.com/to-ny/friends-log">friends-log</a> <span class="year">2025</span></h2>
+      <p>A geeky way to make sure I don't go too long without seeing my friends.</p>
+    </article>
+
+    <article class="project">
+      <h2><a href="https://github.com/to-ny/crypto-trackers">crypto-trackers</a> <span class="year">2025</span></h2>
       <p>A quick experiment with LLM capabilities on a greenfield project.</p>
     </article>
   </section>
